text overflow error solve and jquery src add in head.html

--- a/themes/navigator-hugo/assets/css/advantages.css
+++ b/themes/navigator-hugo/assets/css/advantages.css
@@ -179,6 +179,13 @@
   color:#333333;
   font-family:   "YuGothic", "Hiragino Kaku Gothic ProN", "Meiryo", "Meiryo", sans-serif;
 }
+.text_overflowHidden{
+    display: -webkit-box;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    -webkit-line-clamp: 7;
+    -webkit-box-orient: vertical;
+}
 .block__more {
   font-size: 1rem;
   margin-top: 12px;
